--- a/todo
+++ b/todo
@@ -11,7 +11,12 @@
 ------------------------------------------------------------------------------------------------
 
 Урок 2
+	К курсовому проекту:
+	1. Создать процесс авторизации и распределить роли пользователей.
+	2. Создать сущность «Задача» и реализовать ее свойства. Какие связанные сущности нужно будет создать?
+	3. Покрыть тестами полученный код (и делать это в дальнейшем при выполнении проекта).
 ------------------------------------------------------------------------------------------------
+
 Урок 3
 ------------------------------------------------------------------------------------------------
 Урок 4
