--- a/todo
+++ b/todo
@@ -31,9 +31,15 @@
 	К курсовому проекту:
 
 	1. Встроить чат на страницы трекера. Не забывайте, что пользователи должны быть авторизованы и могут смотреть историю чата.
-
 ------------------------------------------------------------------------------------------------
+
 Урок 4
+	1. Создать таблицу модель Проект
+	1. Добавить к выводу в таблице проектов текущий статус проекта.
+	2. Сделать имя проекта ссылкой, при переходе на которую будет открываться страница проекта.
+	3. Добавить сущности task новое свойство – id проекта, к которому принадлежит task.
+	4. На странице проекта выводить превью с привязанными задачами.
+	5. В админке сделать обновление GreedView через Pjax
 ------------------------------------------------------------------------------------------------
 Урок 5
 ------------------------------------------------------------------------------------------------
