--- a/todo
+++ b/todo
@@ -9,30 +9,30 @@
 	3. Какие элементы стоит разместить на главной странице?
 	4. Проработать внешнией вид страницы задачи.
 ------------------------------------------------------------------------------------------------
-
+------------------------------------------------------------------------------------------------
 Урок 2
 	К курсовому проекту:
 	1. Создать процесс авторизации и распределить роли пользователей.
 	2. Создать сущность «Задача» и реализовать ее свойства. Какие связанные сущности нужно будет создать?
 	3. Покрыть тестами полученный код (и делать это в дальнейшем при выполнении проекта).
 ------------------------------------------------------------------------------------------------
-
+------------------------------------------------------------------------------------------------
 Урок 3
 	2. Повторить чат из урока.
 	3. Научить чат запоминать сообщения в БД.
 	4. Создать блок задач:
-	a. Контроллер должен оперировать сущностями «Task» (задача), «User» (пользователь).
-	b. Задача имеет название, статус, описание, дату создания, дату обновления, исполнителя, создателя.
-	c. Все задачи должны быть доступны на странице /task/index/. В списке показываются имя задачи, ее номер (ID) и имя исполнителя.
-	d. При клике на задачу открывается страница задачи с ее описанием, где задачу можно редактировать.
+		a. Контроллер должен оперировать сущностями «Task» (задача), «User» (пользователь).
+		b. Задача имеет название, статус, описание, дату создания, дату обновления, исполнителя, создателя.
+		c. Все задачи должны быть доступны на странице /task/index/. В списке показываются имя задачи, ее номер (ID) и имя исполнителя.
+		d. При клике на задачу открывается страница задачи с ее описанием, где задачу можно редактировать.
 
 	5. *Добавить к чату функционал «Вы пропустили сообщения». Он выводит все сообщения, которые были пропущены с момента закрытия страницы
 	6. *Добавить к каждой задаче чат. Каждая задача должна иметь свой канал сообщений. Подумать, как лучше хранить историю чата.
-	К курсовому проекту:
 
+	К курсовому проекту:
 	1. Встроить чат на страницы трекера. Не забывайте, что пользователи должны быть авторизованы и могут смотреть историю чата.
 ------------------------------------------------------------------------------------------------
-
+------------------------------------------------------------------------------------------------
 Урок 4
 	1. Создать таблицу модель Проект
 	1. Добавить к выводу в таблице проектов текущий статус проекта.
@@ -41,9 +41,18 @@
 	4. На странице проекта выводить превью с привязанными задачами.
 	5. В админке сделать обновление GreedView через Pjax
 ------------------------------------------------------------------------------------------------
+------------------------------------------------------------------------------------------------
 Урок 5
+	1. Создать своего бота, воспроизвести примеры с занятия.
+
+	К курсовому проекту:
+	1. Реализовать функционал рассылки сообщений по созданию и обновлению проектов.
+	2. Добавить функционал оповещения о новых задачах.
+	3. Отправка оповещений через события
+------------------------------------------------------------------------------------------------
 ------------------------------------------------------------------------------------------------
 Урок 6
+------------------------------------------------------------------------------------------------
 ------------------------------------------------------------------------------------------------
 Урок 7
 ------------------------------------------------------------------------------------------------
