Работа к уроку №6 (Заглушка)

--- a/todo
+++ b/todo
@@ -1,4 +1,5 @@
 Урок 1
+
 	1. Развернуть приложение на базе Advanced Template.
 	2. Настроить общую авторизацию для фронтенда и бекенда.
 	3. *Применить к приложению тему Admin LTE.
@@ -11,6 +12,7 @@
 ------------------------------------------------------------------------------------------------
 ------------------------------------------------------------------------------------------------
 Урок 2
+
 	К курсовому проекту:
 	1. Создать процесс авторизации и распределить роли пользователей.
 	2. Создать сущность «Задача» и реализовать ее свойства. Какие связанные сущности нужно будет создать?
@@ -18,6 +20,7 @@
 ------------------------------------------------------------------------------------------------
 ------------------------------------------------------------------------------------------------
 Урок 3
+
 	2. Повторить чат из урока.
 	3. Научить чат запоминать сообщения в БД.
 	4. Создать блок задач:
@@ -25,7 +28,6 @@
 		b. Задача имеет название, статус, описание, дату создания, дату обновления, исполнителя, создателя.
 		c. Все задачи должны быть доступны на странице /task/index/. В списке показываются имя задачи, ее номер (ID) и имя исполнителя.
 		d. При клике на задачу открывается страница задачи с ее описанием, где задачу можно редактировать.
-
 	5. *Добавить к чату функционал «Вы пропустили сообщения». Он выводит все сообщения, которые были пропущены с момента закрытия страницы
 	6. *Добавить к каждой задаче чат. Каждая задача должна иметь свой канал сообщений. Подумать, как лучше хранить историю чата.
 
@@ -34,6 +36,7 @@
 ------------------------------------------------------------------------------------------------
 ------------------------------------------------------------------------------------------------
 Урок 4
+
 	1. Создать таблицу модель Проект
 	1. Добавить к выводу в таблице проектов текущий статус проекта.
 	2. Сделать имя проекта ссылкой, при переходе на которую будет открываться страница проекта.
@@ -43,6 +46,7 @@
 ------------------------------------------------------------------------------------------------
 ------------------------------------------------------------------------------------------------
 Урок 5
+
 	1. Создать своего бота, воспроизвести примеры с занятия.
 
 	К курсовому проекту:
@@ -52,8 +56,17 @@
 ------------------------------------------------------------------------------------------------
 ------------------------------------------------------------------------------------------------
 Урок 6
+
+	1. Развернуть свой RESTful API.
+
+	К курсовому проекту:
+	1. Представьте, что с Вашим проектом будет интегрироваться сторонняя система. Интегрироваться она будет по REST API. Вам нужно продумать и реализовать функционал API для получения информации и управления задачами (сущность task).
+	2. *Добавить к функционалу REST API авторизацию для контроля доступа к задачам (задача получает свойство приватности).
 ------------------------------------------------------------------------------------------------
 ------------------------------------------------------------------------------------------------
 Урок 7
+
+
 ------------------------------------------------------------------------------------------------
 Урок 8
+
