--- a/todo
+++ b/todo
@@ -69,13 +69,23 @@
 1. Проверить свое приложение на предмет необходимости применения хелперов.
 2. *Изучить класс URLHelper.
 3. *Реализовать «запоминание URL», показывать пользователю пять последних просмотренных задач.
-К курсовому проекту:
 
+К курсовому проекту:
 1. Построить модуль создания новой задачи (Task) на хелперах.
 2. Построить модуль редактирования задач (Task) на хелперах.
 3. *Если у вас есть реализованный из предыдущего курса проект «Календарь», необходимо интегрировать трекер с календарем следующим образом:
 a. В календаре должны отображаться задачи, которые имеют deadline (соответственно, на дате предполагаемого завершения);
 b. Через модуль календаря можно начать создавать задачи, т.е. можно кликнуть по числу, выбрать опцию создания новой задачи, затем определить – начинается ли эта задача с данного числа или оно является ее дедлайном.
 ------------------------------------------------------------------------------------------------
+------------------------------------------------------------------------------------------------
 Урок 8
+
+1. Повторить примеры из урока.
+2. Развернуть XHPROF.
+
+К курсовому проекту:
+1. Попытаться отыскать узкие места приложения и устранить их.
+2. Сделать отчеты по задачам для админа.
+
+
 
